--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -32,18 +32,6 @@ h1 {
     font-size: 0.8rem;
 }
 
-h1::before {
-    background-image: url(../img/escudo_st_ives.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: bottom;
-    display: inline-block;
-    width: 3rem; 
-    height: 3rem;
-    margin-right: 15px;
-    content:"";
-}
-
 h1 span {
     color: var(--col-orange);
     font-size: 2rem;
@@ -92,12 +80,9 @@ main {
 footer {
     background-color: var(--col-gray);
     color: var(--col-white);
+    font-size: 0.8rem;
     margin-top: 4rem;
     padding: 2rem 0;
-}
-
-footer img {
-    width: 220px;
 }
 
 .container {
@@ -112,6 +97,16 @@ footer img {
 /* Contenido header */
 header .container {
     text-align: center;
+}
+
+/* Contenido header */
+.logo-link {
+    display: flex;
+    justify-content: center;
+}
+
+.logo-img {
+    width: 4rem;
 }
 
 /* Menú de navegación */
@@ -132,9 +127,22 @@ footer .container {
     text-align: center;
 }
 
-/* Contenido footer */
-footer p {
-    font-size: 0.8rem;
+footer ul {
+    display: flex;
+    justify-content:  space-evenly;
+    margin-bottom: 3rem;
+}
+
+footer ul li a {
+    color: var(--col-white);
+}
+
+footer ul li a:hover {
+    color: var(--col-orange);
+}
+
+footer img {
+    width: 220px;
 }
 
 .textoCentrado {
@@ -173,7 +181,7 @@ iframe {
 }
 
 #contenidoInicio {
-    margin: 6rem 0;
+    margin: 5rem 0;
     text-align: center;
 }
 
@@ -191,6 +199,38 @@ iframe {
 }
 
 /* Presentación */
+
+@keyframes float {
+    0% {
+      box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+      transform: translateY(0px);
+    }
+    50% {
+      box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+      transform: translateY(-20px);
+    }
+    100% {
+      box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+      transform: translateY(0px);
+    }
+  }
+  
+  .logoAnimado {
+    width: 150px;
+    height: 150px;
+    box-sizing: border-box;
+    border: 5px white solid;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    transform: translateY(0px);
+    animation: float 5s ease-in-out infinite;
+  }
+  
+  .logoAnimado img {
+    width: 100%;
+    height: auto;
+  }
 
 #canvasPoblacion {
     display: block;
@@ -222,6 +262,42 @@ iframe {
     margin-top: 1rem;
     width: 80%;
 }
+
+#imgInternas {
+    display: flex;
+    justify-content: space-around;
+}
+
+/* Animation property */
+  
+#listaLugares img:hover {
+    animation: wiggle 2s linear;
+  }
+  
+  /* Keyframes */
+  @keyframes wiggle {
+    0%, 7% {
+      transform: rotateZ(0);
+    }
+    15% {
+      transform: rotateZ(-15deg);
+    }
+    20% {
+      transform: rotateZ(10deg);
+    }
+    25% {
+      transform: rotateZ(-10deg);
+    }
+    30% {
+      transform: rotateZ(6deg);
+    }
+    35% {
+      transform: rotateZ(-4deg);
+    }
+    40%, 100% {
+      transform: rotateZ(0);
+    }
+  }
 
 /* Páginas de detalle */
 
@@ -255,6 +331,26 @@ iframe {
     padding-left: 2rem;
 }
 
+#listaEnlaces ul li a {
+    position: relative;
+    display: inline-block;
+}
+
+#listaEnlaces ul li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -0.5px;
+    width: 0;
+    height: 2px;
+    background-color: var(--col-gray);
+    transition: width 0.3s ease-in-out; 
+}
+
+#listaEnlaces ul li a:hover::after {
+    width: 100%;
+}
+
 .enlaceActivo {
     color: var(--col-gray);
 }
@@ -266,22 +362,14 @@ iframe {
         max-width: 590px;
     }
 
+    .logo-img {
+        width: 5rem;
+    }
+
     /* Elementos comunes */
     h1 {
         color: var(--col-gray);
         font-size: 1.3rem;
-    }
-    
-    h1::before {
-        background-image: url(../img/escudo_st_ives.png);
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: bottom;
-        display: inline-block;
-        width: 4rem; 
-        height: 4rem;
-        margin-right: 15px;
-        content:"";
     }
     
     h1 span {
@@ -323,9 +411,13 @@ iframe {
 
     /* Contenido header */
     header .container {
-        align-items: baseline;
+        align-items: flex-end;
         display: flex;
         justify-content: space-between;
+    }
+
+    .logo-img {
+        width: 6rem;
     }
 
     /* Menú de navegación */
@@ -341,6 +433,11 @@ iframe {
         width: 70%;
     }
 
+    /* Footer */
+    footer {
+        font-size: 1rem;
+    }
+
     /* Inicio */
 
     #contenidoInicio h2 {
@@ -349,6 +446,11 @@ iframe {
 
     #contenidoInicio h3 {
         font-size: 1.4rem;
+    }
+
+    #contenidoInicio img {
+        clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+        width: 45%;
     }
 
     /* Lugares de interés */
