--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -107,6 +107,11 @@ header .container {
 
 .logo-img {
     width: 4rem;
+    transition: transform 0.3s ease-in-out;
+}
+
+.logo-img:hover {
+    transform: scale(1.2);
 }
 
 /* Menú de navegación */
